--- a/main.ipynb
+++ b/main.ipynb
@@ -7,6 +7,47 @@
     "# Hackyeach\n",
     "QubitFreaks"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "print(os.environ.get('IBM_API_KEY'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'IBMQ' from 'qiskit' (/mnt/c/users/jozek/Developer/IBM_Quantum/.venv/lib/python3.9/site-packages/qiskit/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mqiskit\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m IBMQ\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[1;32m      3\u001b[0m IBMQ\u001b[38;5;241m.\u001b[39msave_account(os\u001b[38;5;241m.\u001b[39mgetenv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mIBM_API_KEY\u001b[39m\u001b[38;5;124m'\u001b[39m))\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'IBMQ' from 'qiskit' (/mnt/c/users/jozek/Developer/IBM_Quantum/.venv/lib/python3.9/site-packages/qiskit/__init__.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from qiskit import IBMQ\n",
+    "import os\n",
+    "IBMQ.save_account(os.getenv('IBM_API_KEY'))\n"
+   ]
   }
  ],
  "metadata": {
@@ -16,7 +57,15 @@
    "name": ".venv"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.2"
   }
  },
