--- a/main.ipynb
+++ b/main.ipynb
@@ -19,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. 📃 Letsenerate a sample data for training and testing"
+    "## 1. 📃 Lets generate a sample of data for training and testing"
    ]
   },
   {
